# PathfindingShip

./: .gitignore  README.md
data/: res.xml
data/fields/: big_field.txt  field2.txt  field3.txt  from_example1.txt  from_example2.txt  names.txt  no_path.txt  small_field.txt
data/fonts/: sdf-font.fnt
proj.cmake/: CMakeLists.txt  run.sh
proj.emscripten/: CMakeLists.txt  run.sh
src/: entry_point.cpp  example.cpp
src/model/: .field.cpp.swp  .field.h.swp  field.cpp  field.h  field_loader.cpp  field_loader.h  model.cpp  model.h  model_observer.h  pathfinder.cpp  pathfinder.h  ship.cpp  ship.h  ship_manager.cpp  ship_manager.h
src/presenter/: ipresenter.h  presenter.cpp  presenter.h  ship_move.h
src/view/: cell.cpp  cell.h  ship.h  ship_place.cpp  ship_place.h  ship_view.cpp  ship_view.h  view.cpp  view.h
test/: TestField.h  TestPathfinder.h  TestShipManager.h  run.sh
